[package]
name = "kv260_rtcl_p3s7_hs"
version = "0.1.0"
edition = "2021"

[dependencies]
jelly-mem_access = "0.2.5"
#jelly-lib = { git = "https://github.com/ryuz/jelly-lib-rs.git", branch = "develop" }
#jelly-lib = { git = "https://github.com/ryuz/jelly-lib-rs.git", rev = "a719c9b" }
jelly-lib = { path = "../../../../../jelly/rust/lib" }

#jelly-pac = { git = "https://github.com/ryuz/jelly-pac-rs.git", branch = "develop"}
jelly-pac = { git = "https://github.com/ryuz/jelly-pac-rs.git", rev = "6a62e64" }

# TODO: OpenCV dependency temporarily disabled for cross-compilation
#opencv = { version = "0.96.0", features = ["clang-runtime"], default-features = false }

jelly-fpgautil = {git="https://github.com/ryuz/jelly-fpgautil-rs.git", tag="v0.0.2"}

rtcl-lib = { path = "../../../../../rust/lib" }

ctrlc = "3.5.0"
opencv = "0.93.5"
#opencv = "0.96.0"
chrono = { version = "0.4", features = ["clock", "std"] }

[features]
default = ["std"]
std = []
