[package]
name = "kv260_rtcl_p3s7_mnist_seg"
version = "0.1.0"
edition = "2021"

[dependencies]
jelly-mem_access = "0.2.5"
#jelly-lib = { git = "https://github.com/ryuz/jelly-lib-rs.git", branch = "develop" }
#jelly-lib = { git = "https://github.com/ryuz/jelly-lib-rs.git", rev = "a719c9b" }
jelly-lib = { path = "../../../../../jelly/rust/lib" }
jelly-pac = { git = "https://github.com/ryuz/jelly-pac-rs.git", rev = "6a62e64" }
jelly-fpgautil = {git="https://github.com/ryuz/jelly-fpgautil-rs.git", tag="v0.0.2"}
rtcl-lib = { path = "../../../../../rust/lib" }
opencv = { version = "0.93.5", optional = true }
chrono = { version = "0.4", features = ["clock", "std"] }
ctrlc = "3.5.0"
clap = { version = "4.0", features = ["derive"] }

[features]
default = ["std", "opencv"]
std = []
