[package]
name = "rtcl_p3s7_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
once_cell = "1.21.3"
kv260_rtcl_p3s7_hs = { path = "../../rust", features = ["std"], default-features = false }

#jelly-mem_access = {path = "../../../../../../rust/mem_access" }
jelly-mem_access = "0.2.5"
jelly-lib        = {path = "../../../../../../jelly/rust/lib" }
jelly-pac        = {path = "../../../../../../jelly/rust/pac" }

[build-dependencies]
tonic-prost-build = "0.14.2"
