[package]
name = "rtcl_p3s7_server"
version = "0.1.1"
edition = "2021"

[dependencies]
tonic = "0.14.5"
prost = "0.14.3"
tonic-prost = "0.14.5"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
once_cell = "1.21.4"
clap = { version = "4.5", features = ["derive"] }
kv260_rtcl_p3s7_hs = { path = "../../rust", features = ["std"], default-features = false }

#jelly-mem_access = {path = "../../../../../../rust/mem_access" }
jelly-mem_access = "0.2.5"
jelly-lib        = {path = "../../../../../../jelly/rust/lib" }
jelly-pac        = {path = "../../../../../../jelly/rust/pac" }

[build-dependencies]
tonic-prost-build = "0.14.5"
